--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/image"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
+    android:background="@drawable/bg_color"
     tools:context=".MainActivity">
 
   <ImageView
@@ -15,7 +15,7 @@
       android:layout_marginStart="10dp"
       android:layout_marginTop="50dp"
       android:layout_marginEnd="10dp"
-      android:src="@drawable/logo4"
+      android:src="@drawable/sin_t_tulo_2"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -28,9 +28,10 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:layout_marginBottom="30dp"
-      android:fontFamily="@font/bangers"
+      android:fontFamily="@font/poppins_semibold"
       android:text="GYMUP!"
       android:textAlignment="center"
+      android:textColor="#ffffff"
       android:textSize="50sp"
       android:visibility="visible"
       app:layout_constraintBottom_toBottomOf="parent"
@@ -47,10 +48,11 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="45dp"
       android:layout_marginBottom="40dp"
-      android:fontFamily="@font/antic"
+      android:fontFamily="@font/poppins_semibold"
       android:text="Tu gimnasio a un click!"
       android:textAlignment="center"
-      android:textSize="18sp"
+      android:textColor="#ffffff"
+      android:textSize="26sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.497"
