--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
       android:layout_marginStart="10dp"
       android:layout_marginTop="50dp"
       android:layout_marginEnd="10dp"
-      android:src="@drawable/sin_t_tulo_2"
+      android:src="@drawable/logo"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
